several improvements on session management
